--- a/css/common.css
+++ b/css/common.css
@@ -33,236 +33,236 @@
 .mid {margin:auto !important;}
 .mid-x {margin-left:auto !important;margin-right:auto !important;}
 .mid-y {margin-top:auto !important;margin-bottom:auto !important;}
-.m-5 {margin:5px !important;}
-.m-6 {margin:6px !important;}
-.m-7 {margin:7px !important;}
-.m-8 {margin:8px !important;}
-.m-9 {margin:9px !important;}
-.m-10 {margin:10px !important;}
-.m-11 {margin:11px !important;}
-.m-12 {margin:12px !important;}
-.m-13 {margin:13px !important;}
-.m-14 {margin:14px !important;}
-.m-15 {margin:15px !important;}
-.m-16 {margin:16px !important;}
-.m-17 {margin:17px !important;}
-.m-18 {margin:18px !important;}
-.m-19 {margin:19px !important;}
-.m-20 {margin:20px !important;}
-.m-25 {margin:25px !important;}
-.m-30 {margin:30px !important;}
-.m-35 {margin:35px !important;}
-.m-40 {margin:40px !important;}
-.m-45 {margin:45px !important;}
-.m-50 {margin:50px !important;}
+.m-5 {margin:0.4167rem !important;}
+.m-6 {margin:0.5rem !important;}
+.m-7 {margin:0.5833rem !important;}
+.m-8 {margin:0.6667rem !important;}
+.m-9 {margin:0.75rem !important;}
+.m-10 {margin:0.8333rem !important;}
+.m-11 {margin:0.9167rem !important;}
+.m-12 {margin:1rem !important;}
+.m-13 {margin:1.0833rem !important;}
+.m-14 {margin:1.1667rem !important;}
+.m-15 {margin:1.25rem !important;}
+.m-16 {margin:1.3333rem !important;}
+.m-17 {margin:1.4167rem !important;}
+.m-18 {margin:1.5rem !important;}
+.m-19 {margin:1.5833rem !important;}
+.m-20 {margin:1.6667rem !important;}
+.m-25 {margin:2.083rem !important;}
+.m-30 {margin:2.5rem !important;}
+.m-35 {margin:2.917rem !important;}
+.m-40 {margin:3.333rem !important;}
+.m-45 {margin:3.75rem !important;}
+.m-50 {margin:4.167rem !important;}
 .mt-auto {margin-top:auto !important;}
-.mt-5 {margin-top:5px !important;}
-.mt-6 {margin-top:6px !important;}
-.mt-7 {margin-top:7px !important;}
-.mt-8 {margin-top:8px !important;}
-.mt-9 {margin-top:9px !important;}
-.mt-10 {margin-top:10px !important;}
-.mt-11 {margin-top:11px !important;}
-.mt-12 {margin-top:12px !important;}
-.mt-13 {margin-top:13px !important;}
-.mt-14 {margin-top:14px !important;}
-.mt-15 {margin-top:15px !important;}
-.mt-16 {margin-top:16px !important;}
-.mt-17 {margin-top:17px !important;}
-.mt-18 {margin-top:18px !important;}
-.mt-19 {margin-top:19px !important;}
-.mt-20 {margin-top:20px !important;}
-.mt-25 {margin-top:25px !important;}
-.mt-30 {margin-top:30px !important;}
-.mt-35 {margin-top:35px !important;}
-.mt-40 {margin-top:40px !important;}
-.mt-45 {margin-top:45px !important;}
-.mt-50 {margin-top:50px !important;}
+.mt-5 {margin-top:0.4167rem !important;}
+.mt-6 {margin-top:0.5rem !important;}
+.mt-7 {margin-top:0.5833rem !important;}
+.mt-8 {margin-top:0.6667rem !important;}
+.mt-9 {margin-top:0.75rem !important;}
+.mt-10 {margin-top:0.8333rem !important;}
+.mt-11 {margin-top:0.9167rem !important;}
+.mt-12 {margin-top:1rem !important;}
+.mt-13 {margin-top:1.0833rem !important;}
+.mt-14 {margin-top:1.1667rem !important;}
+.mt-15 {margin-top:1.25rem !important;}
+.mt-16 {margin-top:1.3333rem !important;}
+.mt-17 {margin-top:1.4167rem !important;}
+.mt-18 {margin-top:1.5rem !important;}
+.mt-19 {margin-top:1.5833rem !important;}
+.mt-20 {margin-top:1.6667rem !important;}
+.mt-25 {margin-top:2.083rem !important;}
+.mt-30 {margin-top:2.5rem !important;}
+.mt-35 {margin-top:2.917rem !important;}
+.mt-40 {margin-top:3.333rem !important;}
+.mt-45 {margin-top:3.75rem !important;}
+.mt-50 {margin-top:4.167rem !important;}
 .mr-auto {margin-right:auto !important;}
-.mr-5 {margin-right:5px !important;}
-.mr-6 {margin-right:6px !important;}
-.mr-7 {margin-right:7px !important;}
-.mr-8 {margin-right:8px !important;}
-.mr-9 {margin-right:9px !important;}
-.mr-10 {margin-right:10px !important;}
-.mr-11 {margin-right:11px !important;}
-.mr-12 {margin-right:12px !important;}
-.mr-13 {margin-right:13px !important;}
-.mr-14 {margin-right:14px !important;}
-.mr-15 {margin-right:15px !important;}
-.mr-16 {margin-right:16px !important;}
-.mr-17 {margin-right:17px !important;}
-.mr-18 {margin-right:18px !important;}
-.mr-19 {margin-right:19px !important;}
-.mr-20 {margin-right:20px !important;}
-.mr-25 {margin-right:25px !important;}
-.mr-30 {margin-right:30px !important;}
-.mr-35 {margin-right:35px !important;}
-.mr-40 {margin-right:40px !important;}
-.mr-45 {margin-right:45px !important;}
-.mr-50 {margin-right:50px !important;}
+.mr-5 {margin-right:0.4167rem !important;}
+.mr-6 {margin-right:0.5rem !important;}
+.mr-7 {margin-right:0.5833rem !important;}
+.mr-8 {margin-right:0.6667rem !important;}
+.mr-9 {margin-right:0.75rem !important;}
+.mr-10 {margin-right:0.8333rem !important;}
+.mr-11 {margin-right:0.9167rem !important;}
+.mr-12 {margin-right:1rem !important;}
+.mr-13 {margin-right:1.0833rem !important;}
+.mr-14 {margin-right:1.1667rem !important;}
+.mr-15 {margin-right:1.25rem !important;}
+.mr-16 {margin-right:1.3333rem !important;}
+.mr-17 {margin-right:1.4167rem !important;}
+.mr-18 {margin-right:1.5rem !important;}
+.mr-19 {margin-right:1.5833rem !important;}
+.mr-20 {margin-right:1.6667rem !important;}
+.mr-25 {margin-right:2.083rem !important;}
+.mr-30 {margin-right:2.5rem !important;}
+.mr-35 {margin-right:2.917rem !important;}
+.mr-40 {margin-right:3.333rem !important;}
+.mr-45 {margin-right:3.75rem !important;}
+.mr-50 {margin-right:4.167rem !important;}
 .mb-auto {margin-bottom:auto !important;}
-.mb-5 {margin-bottom:5px !important;}
-.mb-6 {margin-bottom:6px !important;}
-.mb-7 {margin-bottom:7px !important;}
-.mb-8 {margin-bottom:8px !important;}
-.mb-9 {margin-bottom:9px !important;}
-.mb-10 {margin-bottom:10px !important;}
-.mb-11 {margin-bottom:11px !important;}
-.mb-12 {margin-bottom:12px !important;}
-.mb-13 {margin-bottom:13px !important;}
-.mb-14 {margin-bottom:14px !important;}
-.mb-15 {margin-bottom:15px !important;}
-.mb-16 {margin-bottom:16px !important;}
-.mb-17 {margin-bottom:17px !important;}
-.mb-18 {margin-bottom:18px !important;}
-.mb-19 {margin-bottom:19px !important;}
-.mb-20 {margin-bottom:20px !important;}
-.mb-25 {margin-bottom:25px !important;}
-.mb-30 {margin-bottom:30px !important;}
-.mb-35 {margin-bottom:35px !important;}
-.mb-40 {margin-bottom:40px !important;}
-.mb-45 {margin-bottom:45px !important;}
-.mb-50 {margin-bottom:50px !important;}
+.mb-5 {margin-bottom:0.4167rem !important;}
+.mb-6 {margin-bottom:0.5rem !important;}
+.mb-7 {margin-bottom:0.5833rem !important;}
+.mb-8 {margin-bottom:0.6667rem !important;}
+.mb-9 {margin-bottom:0.75rem !important;}
+.mb-10 {margin-bottom:0.8333rem !important;}
+.mb-11 {margin-bottom:0.9167rem !important;}
+.mb-12 {margin-bottom:1rem !important;}
+.mb-13 {margin-bottom:1.0833rem !important;}
+.mb-14 {margin-bottom:1.1667rem !important;}
+.mb-15 {margin-bottom:1.25rem !important;}
+.mb-16 {margin-bottom:1.3333rem !important;}
+.mb-17 {margin-bottom:1.4167rem !important;}
+.mb-18 {margin-bottom:1.5rem !important;}
+.mb-19 {margin-bottom:1.5833rem !important;}
+.mb-20 {margin-bottom:1.6667rem !important;}
+.mb-25 {margin-bottom:2.083rem !important;}
+.mb-30 {margin-bottom:2.5rem !important;}
+.mb-35 {margin-bottom:2.917rem !important;}
+.mb-40 {margin-bottom:3.333rem !important;}
+.mb-45 {margin-bottom:3.75rem !important;}
+.mb-50 {margin-bottom:4.167rem !important;}
 .ml-auto {margin-left:auto !important;}
-.ml-5 {margin-left:5px !important;}
-.ml-6 {margin-left:6px !important;}
-.ml-7 {margin-left:7px !important;}
-.ml-8 {margin-left:8px !important;}
-.ml-9 {margin-left:9px !important;}
-.ml-10 {margin-left:10px !important;}
-.ml-11 {margin-left:11px !important;}
-.ml-12 {margin-left:12px !important;}
-.ml-13 {margin-left:13px !important;}
-.ml-14 {margin-left:14px !important;}
-.ml-15 {margin-left:15px !important;}
-.ml-16 {margin-left:16px !important;}
-.ml-17 {margin-left:17px !important;}
-.ml-18 {margin-left:18px !important;}
-.ml-19 {margin-left:19px !important;}
-.ml-20 {margin-left:20px !important;}
-.ml-25 {margin-left:25px !important;}
-.ml-30 {margin-left:30px !important;}
-.ml-35 {margin-left:35px !important;}
-.ml-40 {margin-left:40px !important;}
-.ml-45 {margin-left:45px !important;}
-.ml-50 {margin-left:50px !important;}
+.ml-5 {margin-left:0.4167rem !important;}
+.ml-6 {margin-left:0.5rem !important;}
+.ml-7 {margin-left:0.5833rem !important;}
+.ml-8 {margin-left:0.6667rem !important;}
+.ml-9 {margin-left:0.75rem !important;}
+.ml-10 {margin-left:0.8333rem !important;}
+.ml-11 {margin-left:0.9167rem !important;}
+.ml-12 {margin-left:1rem !important;}
+.ml-13 {margin-left:1.0833rem !important;}
+.ml-14 {margin-left:1.1667rem !important;}
+.ml-15 {margin-left:1.25rem !important;}
+.ml-16 {margin-left:1.3333rem !important;}
+.ml-17 {margin-left:1.4167rem !important;}
+.ml-18 {margin-left:1.5rem !important;}
+.ml-19 {margin-left:1.5833rem !important;}
+.ml-20 {margin-left:1.6667rem !important;}
+.ml-25 {margin-left:2.083rem !important;}
+.ml-30 {margin-left:2.5rem !important;}
+.ml-35 {margin-left:2.917rem !important;}
+.ml-40 {margin-left:3.333rem !important;}
+.ml-45 {margin-left:3.75rem !important;}
+.ml-50 {margin-left:4.167rem !important;}
 .no-mt {margin-top:0 !important;}
 .no-mr {margin-right:0 !important;}
 .no-ml {margin-left:0 !important;}
 .no-mb {margin-bottom:0 !important;}
 .no-mx {margin-left:0 !important;margin-right:0 !important;}
 .no-my {margin-top:0 !important;margin-bottom:0 !important;}
-.p-5 {padding:5px !important;}
-.p-6 {padding:6px !important;}
-.p-7 {padding:7px !important;}
-.p-8 {padding:8px !important;}
-.p-9 {padding:9px !important;}
-.p-10 {padding:10px !important;}
-.p-11 {padding:11px !important;}
-.p-12 {padding:12px !important;}
-.p-13 {padding:13px !important;}
-.p-14 {padding:14px !important;}
-.p-15 {padding:15px !important;}
-.p-16 {padding:16px !important;}
-.p-17 {padding:17px !important;}
-.p-18 {padding:18px !important;}
-.p-19 {padding:19px !important;}
-.p-20 {padding:20px !important;}
-.p-25 {padding:25px !important;}
-.p-30 {padding:30px !important;}
-.p-35 {padding:35px !important;}
-.p-40 {padding:40px !important;}
-.p-45 {padding:45px !important;}
-.p-50 {padding:50px !important;}
-.pt-5 {padding-top:5px !important;}
-.pt-6 {padding-top:6px !important;}
-.pt-7 {padding-top:7px !important;}
-.pt-8 {padding-top:8px !important;}
-.pt-9 {padding-top:9px !important;}
-.pt-10 {padding-top:10px !important;}
-.pt-11 {padding-top:11px !important;}
-.pt-12 {padding-top:12px !important;}
-.pt-13 {padding-top:13px !important;}
-.pt-14 {padding-top:14px !important;}
-.pt-15 {padding-top:15px !important;}
-.pt-16 {padding-top:16px !important;}
-.pt-17 {padding-top:17px !important;}
-.pt-18 {padding-top:18px !important;}
-.pt-19 {padding-top:19px !important;}
-.pt-20 {padding-top:20px !important;}
-.pt-25 {padding-top:25px !important;}
-.pt-30 {padding-top:30px !important;}
-.pt-35 {padding-top:35px !important;}
-.pt-40 {padding-top:40px !important;}
-.pt-45 {padding-top:45px !important;}
-.pt-50 {padding-top:50px !important;}
-.pr-5 {padding-right:5px !important;}
-.pr-6 {padding-right:6px !important;}
-.pr-7 {padding-right:7px !important;}
-.pr-8 {padding-right:8px !important;}
-.pr-9 {padding-right:9px !important;}
-.pr-10 {padding-right:10px !important;}
-.pr-11 {padding-right:11px !important;}
-.pr-12 {padding-right:12px !important;}
-.pr-13 {padding-right:13px !important;}
-.pr-14 {padding-right:14px !important;}
-.pr-15 {padding-right:15px !important;}
-.pr-16 {padding-right:16px !important;}
-.pr-17 {padding-right:17px !important;}
-.pr-18 {padding-right:18px !important;}
-.pr-19 {padding-right:19px !important;}
-.pr-20 {padding-right:20px !important;}
-.pr-25 {padding-right:25px !important;}
-.pr-30 {padding-right:30px !important;}
-.pr-35 {padding-right:35px !important;}
-.pr-40 {padding-right:40px !important;}
-.pr-45 {padding-right:45px !important;}
-.pr-50 {padding-right:50px !important;}
-.pb-5 {padding-bottom:5px !important;}
-.pb-6 {padding-bottom:6px !important;}
-.pb-7 {padding-bottom:7px !important;}
-.pb-8 {padding-bottom:8px !important;}
-.pb-9 {padding-bottom:9px !important;}
-.pb-10 {padding-bottom:10px !important;}
-.pb-11 {padding-bottom:11px !important;}
-.pb-12 {padding-bottom:12px !important;}
-.pb-13 {padding-bottom:13px !important;}
-.pb-14 {padding-bottom:14px !important;}
-.pb-15 {padding-bottom:15px !important;}
-.pb-16 {padding-bottom:16px !important;}
-.pb-17 {padding-bottom:17px !important;}
-.pb-18 {padding-bottom:18px !important;}
-.pb-19 {padding-bottom:19px !important;}
-.pb-20 {padding-bottom:20px !important;}
-.pb-25 {padding-bottom:25px !important;}
-.pb-30 {padding-bottom:30px !important;}
-.pb-35 {padding-bottom:35px !important;}
-.pb-40 {padding-bottom:40px !important;}
-.pb-45 {padding-bottom:45px !important;}
-.pb-50 {padding-bottom:50px !important;}
-.pl-5 {padding-left:5px !important;}
-.pl-6 {padding-left:6px !important;}
-.pl-7 {padding-left:7px !important;}
-.pl-8 {padding-left:8px !important;}
-.pl-9 {padding-left:9px !important;}
-.pl-10 {padding-left:10px !important;}
-.pl-11 {padding-left:11px !important;}
-.pl-12 {padding-left:12px !important;}
-.pl-13 {padding-left:13px !important;}
-.pl-14 {padding-left:14px !important;}
-.pl-15 {padding-left:15px !important;}
-.pl-16 {padding-left:16px !important;}
-.pl-17 {padding-left:17px !important;}
-.pl-18 {padding-left:18px !important;}
-.pl-19 {padding-left:19px !important;}
-.pl-20 {padding-left:20px !important;}
-.pl-25 {padding-left:25px !important;}
-.pl-30 {padding-left:30px !important;}
-.pl-35 {padding-left:35px !important;}
-.pl-40 {padding-left:40px !important;}
-.pl-45 {padding-left:45px !important;}
-.pl-50 {padding-left:50px !important;}
+.p-5 {padding:0.4167rem !important;}
+.p-6 {padding:0.5rem !important;}
+.p-7 {padding:0.5833rem !important;}
+.p-8 {padding:0.6667rem !important;}
+.p-9 {padding:0.75rem !important;}
+.p-10 {padding:0.8333rem !important;}
+.p-11 {padding:0.9167rem !important;}
+.p-12 {padding:1rem !important;}
+.p-13 {padding:1.0833rem !important;}
+.p-14 {padding:1.1667rem !important;}
+.p-15 {padding:1.25rem !important;}
+.p-16 {padding:1.3333rem !important;}
+.p-17 {padding:1.4167rem !important;}
+.p-18 {padding:1.5rem !important;}
+.p-19 {padding:1.5833rem !important;}
+.p-20 {padding:1.6667rem !important;}
+.p-25 {padding:2.083rem !important;}
+.p-30 {padding:2.5rem !important;}
+.p-35 {padding:2.917rem !important;}
+.p-40 {padding:3.333rem !important;}
+.p-45 {padding:3.75rem !important;}
+.p-50 {padding:4.167rem !important;}
+.pt-5 {padding-top:0.4167rem !important;}
+.pt-6 {padding-top:0.5rem !important;}
+.pt-7 {padding-top:0.5833rem !important;}
+.pt-8 {padding-top:0.6667rem !important;}
+.pt-9 {padding-top:0.75rem !important;}
+.pt-10 {padding-top:0.8333rem !important;}
+.pt-11 {padding-top:0.9167rem !important;}
+.pt-12 {padding-top:1rem !important;}
+.pt-13 {padding-top:1.0833rem !important;}
+.pt-14 {padding-top:1.1667rem !important;}
+.pt-15 {padding-top:1.25rem !important;}
+.pt-16 {padding-top:1.3333rem !important;}
+.pt-17 {padding-top:1.4167rem !important;}
+.pt-18 {padding-top:1.5rem !important;}
+.pt-19 {padding-top:1.5833rem !important;}
+.pt-20 {padding-top:1.6667rem !important;}
+.pt-25 {padding-top:2.083rem !important;}
+.pt-30 {padding-top:2.5rem !important;}
+.pt-35 {padding-top:2.917rem !important;}
+.pt-40 {padding-top:3.333rem !important;}
+.pt-45 {padding-top:3.75rem !important;}
+.pt-50 {padding-top:4.167rem !important;}
+.pr-5 {padding-right:0.4167rem !important;}
+.pr-6 {padding-right:0.5rem !important;}
+.pr-7 {padding-right:0.5833rem !important;}
+.pr-8 {padding-right:0.6667rem !important;}
+.pr-9 {padding-right:0.75rem !important;}
+.pr-10 {padding-right:0.8333rem !important;}
+.pr-11 {padding-right:0.9167rem !important;}
+.pr-12 {padding-right:1rem !important;}
+.pr-13 {padding-right:1.0833rem !important;}
+.pr-14 {padding-right:1.1667rem !important;}
+.pr-15 {padding-right:1.25rem !important;}
+.pr-16 {padding-right:1.3333rem !important;}
+.pr-17 {padding-right:1.4167rem !important;}
+.pr-18 {padding-right:1.5rem !important;}
+.pr-19 {padding-right:1.5833rem !important;}
+.pr-20 {padding-right:1.6667rem !important;}
+.pr-25 {padding-right:2.083rem !important;}
+.pr-30 {padding-right:2.5rem !important;}
+.pr-35 {padding-right:2.917rem !important;}
+.pr-40 {padding-right:3.333rem !important;}
+.pr-45 {padding-right:3.75rem !important;}
+.pr-50 {padding-right:4.167rem !important;}
+.pb-5 {padding-bottom:0.4167rem !important;}
+.pb-6 {padding-bottom:0.5rem !important;}
+.pb-7 {padding-bottom:0.5833rem !important;}
+.pb-8 {padding-bottom:0.6667rem !important;}
+.pb-9 {padding-bottom:0.75rem !important;}
+.pb-10 {padding-bottom:0.8333rem !important;}
+.pb-11 {padding-bottom:0.9167rem !important;}
+.pb-12 {padding-bottom:1rem !important;}
+.pb-13 {padding-bottom:1.0833rem !important;}
+.pb-14 {padding-bottom:1.1667rem !important;}
+.pb-15 {padding-bottom:1.25rem !important;}
+.pb-16 {padding-bottom:1.3333rem !important;}
+.pb-17 {padding-bottom:1.4167rem !important;}
+.pb-18 {padding-bottom:1.5rem !important;}
+.pb-19 {padding-bottom:1.5833rem !important;}
+.pb-20 {padding-bottom:1.6667rem !important;}
+.pb-25 {padding-bottom:2.083rem !important;}
+.pb-30 {padding-bottom:2.5rem !important;}
+.pb-35 {padding-bottom:2.917rem !important;}
+.pb-40 {padding-bottom:3.333rem !important;}
+.pb-45 {padding-bottom:3.75rem !important;}
+.pb-50 {padding-bottom:4.167rem !important;}
+.pl-5 {padding-left:0.4167rem !important;}
+.pl-6 {padding-left:0.5rem !important;}
+.pl-7 {padding-left:0.5833rem !important;}
+.pl-8 {padding-left:0.6667rem !important;}
+.pl-9 {padding-left:0.75rem !important;}
+.pl-10 {padding-left:0.8333rem !important;}
+.pl-11 {padding-left:0.9167rem !important;}
+.pl-12 {padding-left:1rem !important;}
+.pl-13 {padding-left:1.0833rem !important;}
+.pl-14 {padding-left:1.1667rem !important;}
+.pl-15 {padding-left:1.25rem !important;}
+.pl-16 {padding-left:1.3333rem !important;}
+.pl-17 {padding-left:1.4167rem !important;}
+.pl-18 {padding-left:1.5rem !important;}
+.pl-19 {padding-left:1.5833rem !important;}
+.pl-20 {padding-left:1.6667rem !important;}
+.pl-25 {padding-left:2.083rem !important;}
+.pl-30 {padding-left:2.5rem !important;}
+.pl-35 {padding-left:2.917rem !important;}
+.pl-40 {padding-left:3.333rem !important;}
+.pl-45 {padding-left:3.75rem !important;}
+.pl-50 {padding-left:4.167rem !important;}
 .no-pt {padding-top:0 !important;}
 .no-pr {padding-right:0 !important;}
 .no-pb {padding-bottom:0 !important;}
