--- a/css/layout.css
+++ b/css/layout.css
@@ -131,7 +131,9 @@ body.open .side-cover { background-color: rgba(0, 0, 0, 0.4); pointer-events: au
 .topsch-box .ranking-box .ranking-close { display: flex; align-items: center; justify-content: center; width: 100%; height: 4.167rem; font-size: 1.3333rem; font-weight: 700; color: #FFFFFF; background: #888888;}
 .topsch-box .ranking-box .ranking-close i { width: 1.5rem; height: 1.5rem;}
 
+.main-banner { width: 100%; overflow: hidden;}
 
+/* title-area */
 .contents .title-area { display: flex; align-items: center; padding: 1.25rem 1.6667rem 0;}
 .contents .title-area h2 { font-size: 1.5rem; font-weight: 700; line-height: 2.1667rem; color: #202020;}
 .contents .title-area .type-check { display: flex; align-items: center; margin-left: auto;}
@@ -142,6 +144,7 @@ body.open .side-cover { background-color: rgba(0, 0, 0, 0.4); pointer-events: au
 .contents .title-area .type-check input:checked + label.list { background: url(../img/ic_list_on.png) no-repeat center; background-size: 100%;}
 .contents .title-area .type-check input:checked + label.gallery { background: url(../img/ic_gallery_on.png) no-repeat center; background-size: 100%;}
 
+/* list */
 .contents .lists-box { padding-bottom: 4.167rem;}
 .contents .lists-box ul.lists { display: flex; flex-direction: column;}
 .contents .lists-box ul.lists li { display: flex; align-items: center; height: 7.833rem; padding: 0.8333rem 1.6667rem; border-bottom: 1px solid #F5F5F5;}
@@ -172,3 +175,23 @@ body.open .side-cover { background-color: rgba(0, 0, 0, 0.4); pointer-events: au
 
 .contents .lists-box ul.lists li.adult .adult-box { display: block;}
 .contents .lists-box ul.lists li.adult .icon-adult { display: inline-block;}
+
+/* tab-menu */
+.tab-menu ul { display: flex; align-items: center; width: 100%;}
+.tab-menu ul li a { display: flex; align-items: center; justify-content: center; position: relative; height: 3.917rem; background: #32197B; font-size: 1.1667rem; font-weight: 700; line-height: 1.6667rem; color: #C1ACFF; cursor: pointer;}
+.tab-menu ul li a.on { color: #562BD1; background: #FFFFFF;}
+
+/* btn */
+.btn-primary { background: #562BD1; color: #FFFFFF;}
+
+/* inuut */
+input { font-size: 1.1667rem; font-weight: 400; color: #404040; line-height: 1.6667rem; background: #FFFFFF; border: 1px solid #E3E3E3; border-radius: 0.3333rem; outline: none;}
+input:focus { border-color: #404040;}
+input:disabled { background: #F5F5F5; color: #A8A8A8;}
+input::placeholder { color: #A8A8A8;}
+
+/* checkbox */
+.checkbox label { position: relative; display: block; font-size: 1.1667rem; line-height: 1.6667rem; color: #404040; padding-left: 2.5rem; cursor: pointer;}
+.checkbox label::before { content: ""; position: absolute; top: 0; left: 0; display: block; width: 1.6667rem; height: 1.6667rem; background: url(../img/check.png) no-repeat center; background-size: 100%; border-radius: 3px;}
+.checkbox input[type="checkbox"] { display: none;}
+.checkbox input[type="checkbox"]:checked + label::before { background: url(../img/check-on.png) no-repeat center; background-size: 100%;}
